edit Cors